--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="player">
       <video
         controls
-        src="../클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편, 웹 포트폴리오) - 프론트엔드 개발자 입문편- HTML, CSS, Javascript.mp4"
+        src="클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편, 웹 포트폴리오) - 프론트엔드 개발자 입문편- HTML, CSS, Javascript.mp4"
       ></video>
     </section>
     <!-- Video infomation -->
