--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="player">
       <video
         controls
-        src=""http://media.w3.org/2010/05/sintel/trailer.mp4""
+        src="http://media.w3.org/2010/05/sintel/trailer.mp4"
       ></video>
     </section>
     <!-- Video infomation -->
